otel-kube/samples/dice/k8s/dice-init.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dice-init
spec:
  selector:
    app: dice-init
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dice-init
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dice-init
  template:
    metadata:
      labels:
        app: dice-init
    spec:
      containers:
        - name: dice-init
          image: flytux/dice:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: k8s-monitoring
  name: dice-init
spec:
  ingressClassName: nginx
  rules:
  - host: dice-init.node-01
    http:
      paths:
      - backend:
          service:
            name: dice-init
            port:
              number: 8080
        path: /
        pathType: Prefix
