otel-kube/samples/dice/k8s/dice.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dice
spec:
  selector:
    app: dice
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dice
  template:
    metadata:
      annotations:
        instrumentation.opentelemetry.io/inject-java: "true"
      labels:
        app: dice
    spec:
      containers:
        - name: dice
          image: flytux/dice:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: k8s-monitoring
  name: dice
spec:
  ingressClassName: nginx
  rules:
  - host: dice.node-01
    http:
      paths:
      - backend:
          service:
            name: dice
            port:
              number: 8080
        path: /
        pathType: Prefix
